Intro and skills changed in light version

--- a/light/index.html
+++ b/light/index.html
@@ -77,7 +77,7 @@
 
                                     <div class="c-header__avatar">
                                         <div class="a-header  c-avatar">
-                                            <img class="c-avatar__img" src="assets/images/header/avatar.jpg" alt="">
+                                            <img class="c-avatar__img" src="assets/images/header/profile.png" alt="">
                                         </div><!-- /c-avatar -->
                                     </div><!-- /c-header-avatar -->
 
@@ -95,16 +95,16 @@
                                                 <h1 class="c-brand__title  t-title">
                                                     <span class="c-brand__sizer">
                                                         <span class="a-header  c-brand__first-word  t-title__first-word">
-                                                            Desmond
+                                                            Arpit
                                                         </span>
                                                         <span class="a-header  c-brand__second-word  t-title__second-word">
-                                                            Rambowski
+                                                            Khurana
                                                         </span>
                                                     </span>
                                                 </h1>
                                                 <h2 class="a-header  c-brand__sub-title  t-sub-title">
                                                     <span class="c-brand__sizer">
-                                                        Web Developer &amp; Front-end Expert
+                                                        Full Stack Developer
                                                     </span>
                                                 </h2>
                                             </div><!-- /c-brand -->
@@ -142,7 +142,7 @@
                                                     <div class="o-content__body">
                                                         <h4>Location</h4>
                                                         <address>
-                                                            Portland, OR
+                                                            Vellore, OR
                                                         </address>
                                                     </div>
                                                 </div><!-- /o-content -->
@@ -153,7 +153,7 @@
                                                     <div class="o-content__body">
                                                         <h4>Phone</h4>
                                                         <p>
-                                                            534.456.886
+                                                            9335005977
                                                         </p>
                                                     </div>
                                                 </div><!-- /o-content -->
@@ -166,7 +166,7 @@
                                                             <h4>Web</h4>
                                                             <p>
                                                                 <span class="t-link-container__item--blended">
-                                                                    ruventhemes.com
+                                                                    www.arpitkhurana.ml
                                                                 </span>
                                                             </p>
                                                         </a><!-- /o-link-container -->
@@ -181,7 +181,7 @@
                                                             <h4>Email</h4>
                                                             <p>
                                                                 <span class="t-link-container__item--blended">
-                                                                    hello@example.com
+                                                                    arpit.khurana353@gmail.com
                                                                 </span>
                                                             </p>
                                                         </a><!-- /o-link-container -->
@@ -233,11 +233,10 @@
                                 <div class="c-intro">
                                     <div class="o-content__body">
                                         <p>
-                                            Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Phasellus hendrerit. Pellentesque aaliquet nibh nec urna. In nisi neque, aliquet vel, dapibus id, mattis vel, nisi. Sed
-                                            <a href="#" target="_blank">pretium</a>, ligula sollicitudin laoreet viverra, tortor libero sodales leo, eget blandit nunc tortor eu nibh. Nullam mollis. Ut justo. Suspendisse potenti. Nulla vitae mauris non felis mollis faucibus.
+                                            Hey! whats up? My name is Arpit Khurana. I am a computer science student born and raised in Uttar Pradesh,INDIA currently studying Computer Science and Engineering in VIT-UNIVERSITY. I am a Full stack developer who strives to marry the love of web and app development by finding a harmonious balance between functionality and aesthetics.
                                         </p>
                                         <p>
-                                            Sed egestas, ante et vulputate volutpat, eros pede semper est, vitae luctus metus libero eu augue. Morbi purus libero, faucibus adipiscing, commodo quis, gravida id, est. Sed lectus. Praesent elementum hendrerit tortor. Sed semper lorem at felis. Vestibulum volutpat, lacus a ultrices sagittis, mi neque euismod dui, eu pulvinar nunc sapien ornare nisl. Phasellus pede arcu, dapibus eu, fermentum et, dapibus sed, urna. Fusce lacinia arcu et nulla. Nulla vitae mauris non felis mollis.
+                                            I’ve always loved solving problems and always keen to learn, and yea I do beleive in understading not just knowing things as one great personality has said Any fool can know. The point is to understand .... guess who ? Our famous physicist Albert Einstein who screwed up every god damm guy's school life aaahhh laws of motion but yea no offense.
                                         </p>
                                     </div>
                                 </div>
@@ -422,7 +421,7 @@
                                                 </div>
                                             </div>
                                             <div class="o-media__body">
-                                                <h3>Photoshop</h3>
+                                                <h3>Front End Web Developemet</h3>
                                             </div>
                                         </div>
                                         <div class="c-progress-bar  o-content__body  t-border-color-bg  u-mt-text">
@@ -440,7 +439,7 @@
                                                 </div>
                                             </div>
                                             <div class="o-media__body">
-                                                <h3>Illustrator</h3>
+                                                <h3>PHP</h3>
                                             </div>
                                         </div>
                                         <div class="c-progress-bar  o-content__body  t-border-color-bg  u-mt-text">
@@ -458,7 +457,7 @@
                                                 </div>
                                             </div>
                                             <div class="o-media__body">
-                                                <h3>Git</h3>
+                                                <h3>Python</h3>
                                             </div>
                                         </div>
                                         <div class="c-progress-bar  o-content__body  t-border-color-bg  u-mt-text">
@@ -476,7 +475,7 @@
                                                 </div>
                                             </div>
                                             <div class="o-media__body">
-                                                <h3>After Effects</h3>
+                                                <h3>Java</h3>
                                             </div>
                                         </div>
                                         <div class="c-progress-bar  o-content__body  t-border-color-bg  u-mt-text">
@@ -494,7 +493,7 @@
                                                 </div>
                                             </div>
                                             <div class="o-media__body">
-                                                <h3>Sketch</h3>
+                                                <h3>C++</h3>
                                             </div>
                                         </div>
                                         <div class="c-progress-bar  o-content__body  t-border-color-bg  u-mt-text">
@@ -512,7 +511,7 @@
                                                 </div>
                                             </div>
                                             <div class="o-media__body">
-                                                <h3>CSS3 Animation</h3>
+                                                <h3>Android App Developemnt</h3>
                                             </div>
                                         </div>
                                         <div class="c-progress-bar  o-content__body  t-border-color-bg  u-mt-text">
@@ -530,7 +529,7 @@
                                                 </div>
                                             </div>
                                             <div class="o-media__body">
-                                                <h3>PageSpeed Insights</h3>
+                                                <h3>Bootstrap</h3>
                                             </div>
                                         </div>
                                         <div class="c-progress-bar  o-content__body  t-border-color-bg  u-mt-text">
@@ -548,7 +547,7 @@
                                                 </div>
                                             </div>
                                             <div class="o-media__body">
-                                                <h3>SEO</h3>
+                                                <h3>SQL</h3>
                                             </div>
                                         </div>
                                         <div class="c-progress-bar  o-content__body  t-border-color-bg  u-mt-text">
