--- a/dark/index.html
+++ b/dark/index.html
@@ -95,10 +95,10 @@
                                                 <h1 class="c-brand__title  t-title">
                                                     <span class="c-brand__sizer">
                                                         <span class="a-header  c-brand__first-word  t-title__first-word">
-                                                            Desmond
+                                                            Arpit
                                                         </span>
                                                         <span class="a-header  c-brand__second-word  t-title__second-word">
-                                                            Rambowski
+                                                            Khurana
                                                         </span>
                                                     </span>
                                                 </h1>
