linkes to organizations added

--- a/dark/index.html
+++ b/dark/index.html
@@ -987,22 +987,22 @@
 
                             <ul class="c-clients  o-content">
                                 <li>
-                                    <a href="http://example.com" target="_blank">
+                                    <a href="https://www.facebook.com/knowurvit/" target="_blank">
                                         <img src="assets/images/clients/sigma_xi.jpg" alt="">
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="http://example.com" target="_blank">
+                                    <a href="https://www.facebook.com/saevit/" target="_blank">
                                         <img src="assets/images/clients/sae_vit.jpg" alt="">
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="http://example.com" target="_blank">
+                                    <a href="https://www.wittyfeed.com/" target="_blank">
                                         <img src="assets/images/clients/wittyfeed.jpg" alt="">
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="http://example.com" target="_blank">
+                                    <a href="http://www.vit.ac.in/" target="_blank">
                                         <img src="assets/images/clients/vit_logo.jpg" alt="">
                                     </a>
                                 </li>
